[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/activable.gd" type="Script" id=2]

[node name="Area2D" type="Area2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 2 )
text = "door"
[connection signal="input_event" from="." to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Area2D_mouse_exited"]
